--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-timepicker.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-timepicker.css
@@ -5,6 +5,10 @@
   cursor: pointer;
 }
 
+.lichkin-timepicker-readonly .lichkin-timepicker-text {
+  cursor: text;
+}
+
 .lichkin-timepicker .lichkin-timepicker-button {
   pointer-events:none;
 }
