--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-tree.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-tree.css
@@ -8,3 +8,15 @@
 .lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node {
   border-bottom: none;
 }
+
+.lichkin-tree-readonly .lichkin-icon i {
+  color: #CCCCCC;
+}
+
+.lichkin-tree-readonly .lichkin-text {
+  color: #CCCCCC;
+}
+
+.lichkin-tree-readonly * {
+  cursor: auto;
+}
