--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
@@ -5,5 +5,9 @@
 }
 
 .lichkin-droplist .lichkin-droplist-button {
-  pointer-events:none;
+  pointer-events: none;
+}
+
+.lichkin-droplist .lichkin-droplist-text {
+  position: relative;
 }
