--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-button.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-button.css
@@ -41,3 +41,4 @@
 .lichkin-button.info    {color:#ffffff;background-color:#5bc0de;border-color:#46b8da;}
 .lichkin-button.warning {color:#ffffff;background-color:#f0ad4e;border-color:#eea236;}
 .lichkin-button.danger  {color:#ffffff;background-color:#d9534f;border-color:#d43f3a;}
+.lichkin-button.disable {color:#ffffff;background-color:#cccccc;border-color:#dddddd;}
