--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
@@ -11,3 +11,7 @@
 .lichkin-droplist .lichkin-droplist-text {
   position: relative;
 }
+
+.lichkin-datagrid-pageBar .lichkin-droplist .lichkin-droplist-text {
+  top: -2px;
+}
