datagrid增加等宽字体样式

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -260,3 +260,7 @@
 .lichkin-dialog .lichkin-datagrid .lichkin-datagrid-dataBar,
 .lichkin-dialog .lichkin-datagrid .lichkin-datagrid-pageBar
 {border-left:none;border-right:none;}
+
+.lichkin-table-cell.monospacedFont .lichkin-text {
+  font-family: 'Courier New';
+}
