dialog内多控件布局完善及datagrid列宽细节完善

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -292,3 +292,7 @@
 .lichkin-table-cell.monospacedFont .lichkin-text {
   font-family: 'Courier New';
 }
+
+.lichkin-dialog-form-div>.lichkin-datagrid .lichkin-plugin-dataBar {
+  border-bottom: none;
+}
