datagrid的readonly实现优化

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datepicker.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datepicker.css
@@ -12,3 +12,7 @@
 .lichkin-datepicker .lichkin-datepicker-text:focus {
   outline: none;
 }
+
+.lichkin-datepicker-readonly .lichkin-datepicker-text {
+  cursor: auto;
+}
