--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-map.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-map.css
@@ -1,1 +1,10 @@
 @charset "UTF-8";
+
+.lichkin-plugin-map-marker-label {
+  font-size: 16px;
+  padding: 5px;
+}
+
+.amap-marker-label {
+  border-color: var(--lichkin-plugin-border-color);;
+}
